cleanups and optimizations